# musiq

./: .env.example  .gitignore  .vercelignore  README.md  audio_generator.py  circuit_builder.py  package-lock.json  package.json  pyproject.toml  qwave_gui.py  qwave_run.py  requirements.txt  run_gui.sh  tsconfig.json  vercel.json
api/: circuit.py  generate_audio.py  health.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
circuits/: cx_control_high_2q.qasm  example_iqp_4q.qasm  hadamard_all_measure_8q.qasm  iqp_16q.qasm  iqp_20q.qasm  iqp_24q.qasm  iqp_56q.qasm  iqp_8q.qasm  iqp_like_4q.qasm  mixed_gates_5q.qasm  quantum_walk_8q.qasm  ring_entangle_4q.qasm  simple_entangled_3q.qasm
lib/: types.ts  waveformPlot.ts
musiq/: README.md  audio_generator.py  qwave_gui.py  requirements.txt  run_gui.py  run_gui.sh  spectral_analyzer.py
musiq/examples/: basic_usage.py  load_qasm_example.py
musiq/gui/: circuit_builder.py  main_window.py  visualization.py
musiq/modules/: __init__.py  optimizer.py  quantum_optimizer.py  quantum_waveform_generator.py  simulator.py
musiq/scripts/: verify_quantum_walk.py
musiq/utils/: __init__.py  constants.py  quantum_audio_mapper.py
qwave/: .gitignore  PROJECT_SUMMARY.md  __init__.py  quantum_circuit.qasm
qwave/gui/: __init__.py  circuit_builder.py  main_window.py  visualization.py
qwave/modules/: __init__.py  analyzer.py  audio_analyzer.py  generator.py  optimizer.py  quantum_optimizer.py  quantum_waveform_generator.py  simulator.py
qwave/scripts/: generate_advantage_qasm.py
qwave/utils/: audio_mapper.py  (+2 more)
(+7 files in other folders)
